# lora-scripts-next-leaf

./: .gitignore  .gitmodules  ARCHITECTURE.md  ART_BRIEF.md  AUTODL_LORA_SCRIPTS_NEXT_DEPLOY.md  CHANGELOG.md  CONTRIBUTORS.md  DIFFERENTIAL_LORA_PLAN.md  Dockerfile  Dockerfile-for-Mainland-China  HANDOVER.md  INTEGRATION_NOTES.md  LOSS_CHART_HANDOVER.md  NOTICE.md  README-zh.md  README.md  apply_lora_next_anima_defaults.py  autostart_lora_gui.sh  gui.py  install-cn.ps1  install.bash  install.ps1  install_flash_attn.bat  install_flash_attn.sh  install_preflight.ps1  pyproject.toml  requirements.txt  restart_lora_gui.sh  run_gui.bat  run_gui.ps1  run_gui.sh  run_gui_anima.bat  run_gui_cn.sh  run_gui_source.bat  run_gui_source.ps1  sample_prompts.txt  setup_environment.py  start.ipynb  start_autodl.sh  start_lora_next.sh  (+8 more)
.cursor/rules/: 00-project-overview.mdc  embedded-service-ports.mdc  local-docs-index.mdc
build-scripts/: 01-prepare-python.ps1  02-install-dependencies.ps1  03-copy-project.ps1  04-create-launchers.ps1  05-create-zip.ps1  README.md  build-all.ps1  build_portable.ps1
build-scripts/templates/: Download-Anima-Model.bat  Update-SD-Trainer-Release.bat  Update-SD-Trainer.bat
config/: anima_backend.toml  anima_caption_models.json  anima_fast_backend.toml  differential_lora.toml  lycoris_anima_preset.toml
config/anima_fast_environment/: anima-constraints-cu130.txt  anima-overrides-cu130.txt  main-constraints-cu130.txt
config/presets/: chroma.toml  example.toml
cursor_docs/: ipa-lsnet-design.md  ipa-lsnet-review.md  ipa-transplant.md
docs/: anima-backend.md  anima-fast-merge-checklist.md  anima-fast.md  anima-gemma-vllm.md  anima-training.md  autodl-deploy.md  cli-args.md  docker.md  flash-attention.md  frontend-customization.md  portable-packaging-git-update.md  portable-upgrade-2.5.2-to-2.5.3.md  repo-layout.md  tagger-models.md  train-monitor.md
docs/api/: dataset-tagging.md
docs/design/: tagger-progress-merge-report.md  tagger-progress-ui.md
docs/examples/: anima-edit-dual-ref-10epoch-sd-scripts.toml  anima-edit-dual-ref-multi-preview-sd-scripts.toml  anima-edit-dual-ref-smoke-sd-scripts.toml  anima-edit-imagepulse-10epoch-sd-scripts.toml  anima-edit-imagepulse-10epoch.toml  anima-edit-imagepulse-30epoch-sd-scripts.toml  anima-edit-imagepulse-30epoch.toml  anima-edit-imagepulse-compare-prompts-ab.toml  anima-edit-imagepulse-compare-prompts.toml  anima-edit-imagepulse-compare-sample-e30-sd-scripts.toml  anima-edit-imagepulse-compare-sample-e30.toml  anima-edit-imagepulse-compare-sample-sd-scripts.toml  anima-edit-imagepulse-compare-sample.toml  anima-edit-imagepulse-dataset.toml  anima-edit-imagepulse-sample-prompts.toml  anima-edit-imagepulse-style-10epoch-sd-scripts.toml  anima-edit-imagepulse-style-10epoch.toml  anima-edit-imagepulse-style-dataset.toml  anima-edit-imagepulse-style-sample-prompts.toml  anima-edit-multiref-10epoch.toml  (+6 more)
frontend/: DESIGN-training-params-ui.md  VENDOR.md
ip_adapter/: __init__.py  _adapter_modules.py  _lsnet_model.py  anima_ip_adapter.py  anima_ip_attention.py  anima_ip_converter.py  anima_ip_image_proj.py  anima_ip_train.py  ccip_encoder.py  infer_ipa_example.py  lsnet_encoder.py
legacy/: README.md
mikazuki/: __init__.py  dataset_editor.py  launch_utils.py  portable_utils.py  process.py  tasks.py  train_log_hub.py  update_check.py
scripts/: build_alias_index.py  close-resolved-github-issues.ps1  extract-sidebar.py  patch-anima-fast-entry.py  patch-anima-finetune-ui.py  patch-brand-illustrations.py  patch-home-changelog.py  patch-home-portals.py  patch-native-tageditor-entry.py  patch-nav-copy.py  patch-sidebar-nav.py  patch-spa-frontend-cache.py  patch-tagger-progress-ui.py  patch-ui-brand-version.py  prefetch_default_tagger.py  process_next_trainer_assets.py  start_gemma_vllm.sh
tests/: test_accelerate_resume_fallback.py  test_anima_backend_adapter.py  test_anima_backend_upstream.py  test_anima_caption_pipeline.py  test_anima_fast_backend.py  test_anima_fast_environment_installer.py  test_anima_fast_feature_flag.py  test_anima_fast_integration_static.py  test_anima_fast_plugin_api.py  test_anima_fast_preprocess.py  test_anima_fast_preview.py  test_anima_fast_progress_metrics.py  test_anima_fast_source_root.py  test_anima_fast_task_metadata.py  test_anima_finetune_adapter.py  test_anima_ip_joint_lora.py  test_anima_ip_resume.py  test_anima_train_wrapper.py  test_anima_training_defaults.py  test_cli_entrypoints.py  test_dataset_editor_api.py  test_install_anima_fast_cli.py  test_portable_packaging_scripts.py  test_process_mixed_precision_launch.py  test_sample_prompt_normalization.py  test_sdxl_stable_trainer_contract.py  test_smart_vlm_wd14_inject.py  test_tag_edit_leaf_api.py  test_tag_edit_leaf_api_anima.py  test_tagger_cmd.py  test_tagger_ort_session.py  test_tagger_progress_api.py  test_toriigate_prompt_wiring.py  test_toriigate_vllm_tagger.py  test_train_monitor_status.py  test_train_routing.py  test_vllm_manager.py
tools/: average_lora.py  convert_differential_to_comfyui.py  merge_lora_to_base.py
train_monitor/: index.html  monitor.css  monitor.js  server.py
(+135 files in other folders)
